--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular/platform-browser-dynamic": "~2.3.0",
     "@angular/router": "~3.3.0",
     "angular-in-memory-web-api": "~0.1.17",
+    "angular2-highcharts": "^0.4.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "highcharts": "^5.0.6",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-rc.4",
     "systemjs": "0.19.40",
